--- a/src/css/LoginSignup.css
+++ b/src/css/LoginSignup.css
@@ -1,5 +1,11 @@
 .login-view {
+    position: absolute;
+    height: 100%;
+    width: 100%;
     text-align: center;
+    background: url('https://images.unsplash.com/photo-1536235635699-370e8047ac1a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80') no-repeat center center fixed;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
 }
 
 .form {
@@ -10,6 +16,7 @@
     padding: 30px;
     display: inline-block;
     background-color: white;
+    border-radius: 30px;
 }
 
 .input {
