--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -1,24 +1,43 @@
-.content {
-    position: relative;
-    height: 50%;
-    width: 100%;
-    background: url('https://images.unsplash.com/photo-1536235635699-370e8047ac1a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80') no-repeat center center fixed;
-    background-repeat: no-repeat;
+.banner {
     position: absolute;
+    height: 45%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     top: 80px;
     left: 0;
     -webkit-background-size: cover;
   }
 
-  .text-container {
-      position: absolute;
-      top: 50%;
-      left: 60px;
-      transform: translate(0, -50%)
+  .bannerImage {
+    object-fit: cover;
+    overflow: hidden;
   }
-  
-  .text {
-      font-size: 50px;
-      color: white;
 
+  .content {
+    position: absolute;
+    top: 50%;
+    left: 60px;
+    transform: translate(0, -50%);
+  }
+
+  .text-container {
+    margin-bottom: 30px;
+    font-size: 50px;
+    color: white;
+  }
+
+  .buttons-container {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .button {
+      margin-right: 20px;
+      width: 200px;
+      border-radius: 5px;
+  }
+
+  .browse {
+    background-color: #87a890;
   }
