--- a/src/css/FoodItem.css
+++ b/src/css/FoodItem.css
@@ -22,16 +22,32 @@
     color: white;
 }
 
-.add {
+.food-page__add {
+    position: relative;
     position: absolute;
+    height: 50px;
+    width: 50px;
     bottom: 5px;
     right: 5px;
-    background-color: transparent;
-    font-size: 50px;
+    background-color: black;
+    opacity: 0.5;
     border: none;
-    color: white;
+    border-radius: 10px;
 }
 
-.add:hover {
-    font-size: 52px;
+.food-page__add:hover {
+    opacity: 1.0;
+    background-color: transparent;
+}
+
+.addText {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 0px;
+    padding-bottom: 15px;
+    /* opacity: 1.0; */
+    font-size: 70px;
+    color: white;
 }
