--- a/src/css/FoodItem.css
+++ b/src/css/FoodItem.css
@@ -51,3 +51,23 @@
     font-size: 70px;
     color: white;
 }
+
+.food-page__not-in-season {
+    position: relative;
+    position: absolute;
+    top: 0px;
+    height: 300px;
+    width: 300px;
+    background-color: black;
+    opacity: 0.75;
+    border: none;
+}
+
+.not-in-season-text {
+    position: absolute;
+    left: 50%;
+    bottom: 0px;
+    transform: translate(-50%);
+    width: 100%;
+    color: white;
+}
