--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -35,8 +35,38 @@
       margin-right: 20px;
       width: 200px;
       border-radius: 5px;
+      -webkit-appearance: none;
+      padding: 15px;
+      width: 100px;
+      font-size: 20px;
+      border: solid 1px #87a890
   }
+
+  .button:hover {
+    background-color: #87a890;
+}
 
   .browse {
     background-color: #87a890;
+  }
+
+  .three-step-diagram {
+    position: absolute;
+    top: 60%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding-top: 30px;
+  }
+
+  .step {
+    text-align: center;
+    width: 200px;
+    height: 200px;
+  }
+
+  .step-image {
+    width: 200px;
+    height: 200px;  
   }
