--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,3 +12,50 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+/* Tooltip container */
+.tooltip {
+  position: relative;
+  display: inline-block;
+ }
+ 
+ /* Tooltip text */
+ .tooltip .tooltiptext {
+  visibility: hidden;
+  width: 100px;
+  background-color: #87a890;
+  font-size: 15px;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+ 
+  /* Position the tooltip text */
+  position: absolute;
+  z-index: 1;
+  bottom: 102%;
+  left: 50%;
+  transform: translate(-50%);
+ 
+  /* Fade in tooltip */
+  opacity: 0;
+  transition: opacity 0.3s;
+ }
+ 
+ /* Tooltip arrow */
+ .tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%);
+  border-width: 5px;
+  border-style: solid;
+  border-color: #87a890 transparent transparent transparent;
+ }
+ 
+ /* Show the tooltip text when you mouse over the tooltip container */
+ .tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+ }
