--- a/src/css/RecipeDetails.css
+++ b/src/css/RecipeDetails.css
@@ -7,6 +7,8 @@
     width: 100%;
     height: 300px;
     object-fit: cover;
+    -webkit-filter: blur(5px);
+    filter: blur(5px);
 }
 
 .recipe-header-text {
