--- a/src/css/ShoppingList.css
+++ b/src/css/ShoppingList.css
@@ -1,16 +1,23 @@
 .shopping-list-view {
-    /* text-align: center; */
+    /* position: absolute;
+    height: 100vh;
+    width: 100%;
+    background: url('https://images.unsplash.com/photo-1536235635699-370e8047ac1a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
+    background-repeat: no-repeat;
+    background-size: cover; */
 }
 
 .shopping-list-container {
     position: absolute;
     left: 50%;
     transform: translate(-50%);
-    margin-top: 30px;
-    width: 80%;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    width: 70%;
     display: inline-block;
     background-color: white;
-    padding: 20px;
+    padding: 40px;
+    border-radius: 30px;
 }
 
 .item {
