--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -1,6 +1,6 @@
 .banner {
     position: absolute;
-    height: 45%;
+    height: 320px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -50,23 +50,49 @@
     background-color: #87a890;
   }
 
+  .diagram-container {
+    width: 100%;
+  }
+
   .three-step-diagram {
     position: absolute;
     top: 60%;
-    width: 100%;
+    left: 50%;
+    transform: translate(-50%);
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    padding-top: 30px;
   }
 
   .step {
     text-align: center;
     width: 200px;
     height: 200px;
+    margin: 20px;
   }
 
   .step-image {
     width: 200px;
     height: 200px;  
+  }
+
+  @media screen and (max-width: 600px) {
+    .content {
+      left: 30px;
+    }
+
+    .text-container {
+      font-size: 30px;
+    }
+
+    .three-step-diagram {
+      display: flex;
+      flex-direction: column;
+      left: 50%;
+      transform: translate(-50%);
+    }
+
+    .step {
+      margin-bottom: 30px;
+    }
   }
