--- a/src/css/LoginSignup.css
+++ b/src/css/LoginSignup.css
@@ -16,13 +16,23 @@
 
 .form {
     width: 50%;
-    min-width: 150px;
     height: 520px;
     margin: 20px;
     padding: 30px;
     display: inline-block;
     background-color: white;
     border-radius: 30px;
+}
+
+@media screen and (max-width: 600px) {
+    .form {
+        width: 100%;
+        border-radius: 0px;
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
 }
 
 .input {
