--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -1,11 +1,9 @@
 .banner {
-    position: absolute;
+    position: relative;
     height: 320px;
     width: 100%;
     display: flex;
     flex-direction: column;
-    top: 80px;
-    left: 0;
   }
 
   .bannerImage {
@@ -18,6 +16,8 @@
     top: 50%;
     left: 60px;
     transform: translate(0, -50%);
+    margin-right: 30px;
+    min-width: 255px;
   }
 
   .text-container {
@@ -33,11 +33,10 @@
 
   .button {
       margin-right: 20px;
-      width: 200px;
       border-radius: 5px;
       -webkit-appearance: none;
+      width: 150px;
       padding: 15px;
-      width: 100px;
       font-size: 20px;
       border: solid 1px #87a890
   }
@@ -51,17 +50,15 @@
   }
 
   .diagram-container {
+    margin-top: 40px;
     width: 100%;
   }
 
   .three-step-diagram {
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%);
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    max-width: 1000px;
   }
 
   .step {
@@ -76,16 +73,18 @@
     height: 200px;  
   }
 
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 700px) {
     .content {
       left: 30px;
     }
 
     .text-container {
-      font-size: 30px;
+      font-size: 35px;
+      margin-bottom: 15px;
     }
 
     .three-step-diagram {
+      position: absolute;
       display: flex;
       flex-direction: column;
       left: 50%;
@@ -96,3 +95,23 @@
       margin-bottom: 30px;
     }
   }
+
+  @media screen and (max-width: 380px) {
+    .text-container {
+      font-size: 25px;
+      margin-bottom: 20px;
+    }
+
+    .buttons-container {
+      flex-direction: column;
+      margin-right: 0;
+    }
+
+    .button {
+      width: 100%;
+      margin-right: 0px;
+      margin-bottom: 20px;
+    }
+  }
+
+  
