--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -50,22 +50,24 @@
   }
 
   .diagram-container {
+    position: relative;
     margin-top: 40px;
     width: 100%;
   }
 
   .three-step-diagram {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    max-width: 1000px;
   }
 
   .step {
     text-align: center;
     width: 200px;
     height: 200px;
-    margin: 20px;
+    margin: 25px;
   }
 
   .step-image {
@@ -84,11 +86,8 @@
     }
 
     .three-step-diagram {
-      position: absolute;
       display: flex;
       flex-direction: column;
-      left: 50%;
-      transform: translate(-50%);
     }
 
     .step {
