--- a/src/css/LoginSignup.css
+++ b/src/css/LoginSignup.css
@@ -4,21 +4,20 @@
     width: 100%;
     text-align: center;
     background: url('https://images.unsplash.com/photo-1536235635699-370e8047ac1a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80') no-repeat center center fixed;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
+    background-size: cover;
 }
 
 .title {
-    margin-top: 20px;
+    margin-top: 15px;
     font-size: 50px;
     color: white;
 }
 
 .form {
     width: 50%;
-    height: 520px;
-    margin: 20px;
-    padding: 30px;
+    /* height: 520px; */
+    margin: 15px;
+    padding: 20px;
     display: inline-block;
     background-color: white;
     border-radius: 30px;
@@ -36,7 +35,7 @@
 }
 
 .input {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     height: 40px;
     width: 80%;
     font-size: 20px;
