--- a/src/css/FoodItem.css
+++ b/src/css/FoodItem.css
@@ -13,6 +13,18 @@
     object-fit: cover;
 }
 
+@media screen and (max-width: 665px) {
+    .food-item-tile {
+        width: 100%;
+        height: 150px;
+    }
+
+    .food-item-image {
+        width: 100%;
+        height: 150px;
+    }
+}
+
 .food-item-name {
     position: absolute;
     top: 50%;
