--- a/src/css/FoodItem.css
+++ b/src/css/FoodItem.css
@@ -15,7 +15,9 @@
 
 @media screen and (max-width: 665px) {
     .food-item-tile {
-        width: 100%;
+        left: 0;
+        right: 0;
+        width: auto;
         height: 150px;
     }
 
